# DevOpsPilot

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
ai-engine/: Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt  test_main.py
ai-engine/models/: anomaly_detection.py  predictive_scaling.py  root_cause_analysis.py
ai-engine/training/: data_preprocessing.py  model_training.py
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt  test_main.py
backend/app/: __init__.py  main.py
backend/app/api/: alerts.py  auth.py  deployments.py  metrics.py  websocket.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: alerts.py  metrics.py  user.py
backend/app/services/: ai_engine.py  alert_engine.py  metrics_collector.py  notification_service.py
backend/app/utils/: helpers.py
database/: init.js
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.tsx
frontend/src/components/ai/: AIInsights.tsx  AnomalyDetection.tsx  PredictiveAnalysis.tsx
frontend/src/components/common/: Header.tsx  LoadingSpinner.tsx  Modal.tsx  Sidebar.tsx
frontend/src/components/dashboard/: AlertsPanel.tsx  ChartWidget.tsx  DashboardGrid.tsx  MetricCard.tsx
frontend/src/components/monitoring/: ApplicationHealth.tsx  LogsViewer.tsx  SystemMetrics.tsx
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useMetrics.ts  useWebSocket.ts
frontend/src/pages/: AI.tsx  Alerts.tsx  Dashboard.tsx  Deployments.tsx  Landing.tsx  Monitoring.tsx  Settings.tsx
frontend/src/services/: api.ts  auth.ts  websocket.ts
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: alerts.ts  metrics.ts  user.ts
frontend/src/utils/: constants.ts  formatters.ts
infrastructure/: redis.conf
infrastructure/docker/: docker-compose.prod.yml  nginx.conf
infrastructure/kubernetes/: deployment.yaml  ingress.yaml  namespace.yaml  service.yaml
infrastructure/monitoring/: README.md  alertmanager.yml  blackbox.yml  docker-compose.yml  grafana-dashboard.json  prometheus.yml  promtail.yml  start-monitoring.sh
infrastructure/monitoring/rules/: alerts.yml  basic.yml
infrastructure/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: setup.sh
